# eventfs

./: .dockerignore  AGENTS.md  Cargo.toml  Containerfile  OPERATIONS.md  README.md  SPEC.md  dev.sh
benches/: fuse_operations.rs
benches/fuse_operations/: linux.rs
examples/: branching.rs  file_diff.rs  hello_world.rs
src/: backup.rs  filesystem.rs  lib.rs  linux.rs  mount.rs  storage.rs
tests/: backup.rs  backup_workflows.rs  branches.rs  configuration.rs  events.rs  file_history.rs  filesystem.rs  filesystem_branches.rs  filesystem_configuration.rs  filesystem_events.rs  filesystem_file_history.rs  filesystem_fuse_client_workflows.rs  filesystem_fuse_directories.rs  filesystem_fuse_file_contents.rs  filesystem_fuse_io_controls.rs  filesystem_fuse_load.rs  filesystem_fuse_mount.rs  filesystem_fuse_namespace.rs  filesystem_fuse_sftp.rs  filesystem_fuse_xattrs.rs  fuse.rs  mount_lifecycle.rs
tests/support/: mod.rs
