[package]
name = "eventfs"
version = "0.1.0"
edition = "2024"
description = "An event-sourced FUSE filesystem."
repository = "https://github.com/dprkh/eventfs"
readme = "README.md"

[features]
default = []
tracing = ["dep:tracing"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(coverage_nightly)"] }

[dependencies]
fuser = "0.17"
blake3 = "1"
fastcdc = { version = "4", default-features = false }
libc = "0.2"
rocksdb = "0.24"
postcard = { version = "1", default-features = false, features = ["alloc"] }
serde = { version = "1", features = ["derive"] }
tempfile = "3"
time = { version = "0.3", features = ["serde"] }
tracing = { version = "0.1", optional = true }

[dev-dependencies]
anyhow = "1.0"
criterion = "0.8.2"
linux-raw-sys = { version = "0.12.1", default-features = false, features = ["ioctl"] }

[[bench]]
name = "fuse_operations"
harness = false
